# investai

./: .env  .env.example  .env.production  .gitignore  QUICKSTART.md  README.md  TRADING_INTEGRATION.md  create_tables.py  docker-compose.yml  futu_trading_integration.py  futu_trading_optimized.py  init.sql  investai-business-plan.md  investai-code-examples.py  investai-product-spec.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-trading.txt  requirements.txt  run.py  start_all.sh  start_production.sh  start_server.py  technical-design-v1.md  test_api.py  test_trading_api.py
app/: __init__.py  main.py
app/agents/: base.py  data_collector.py  fundamental_analyst.py  sentiment_analyst.py  strategy_generator.py  technical_analyst.py
app/models/: __init__.py
app/services/: database.py
config/: futu_config.py  futu_optimized_config.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  start_frontend.js  test-connection.js  test_api_integration.js  test_complete_flow.js  test_login.js  test_portfolio_creation.js  test_trading.js  test_ui_functionality.js  vite.config.ts
frontend/frontend/tests/: auth.spec.ts
frontend/src/: App.tsx
frontend/src/components/Auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/Layout/: Header.tsx  Navigation.tsx
frontend/src/components/Trading/: Watchlist.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Analyze.tsx  Dashboard.tsx  History.tsx  Portfolio.tsx  Profile.tsx  TradeHistory.tsx  Trading.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/tests/: accessibility.spec.ts  advanced-workflows.spec.ts  analysis.spec.ts  auth.spec.ts  charts-data.spec.ts  dashboard-debug.spec.ts  dashboard.spec.ts  debug-frontend.spec.ts  error-handling.spec.ts  integration.spec.ts  login-flow.spec.ts  mobile-responsive.spec.ts  performance.spec.ts  profile.spec.ts  security.spec.ts  simple.spec.ts  stock-search.spec.ts  test-utils.ts  ui-components.spec.ts
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py
